<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.total_stats.TotalStatsFragment">

        <androidx.cardview.widget.CardView
            android:id="@+id/confirmed_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardPreventCornerOverlap="false"
            app:cardUseCompatPadding="true"
            card_view:cardBackgroundColor="#E6E6E6"
            card_view:cardCornerRadius="8dp"
            card_view:cardElevation="8dp">

            <LinearLayout
                android:id="@+id/confirmed_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/confirmed_icon"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:padding="5dp"
                    android:tint="@color/blue"
                    android:src="@drawable/ic_confirmed"/>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/confirmed_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_confirmed_title"
                        android:textSize="20sp"
                        android:textColor="@color/blue"/>

                    <TextView
                        android:id="@+id/confirmed_last_update"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="12sp"
                        android:textColor="@android:color/darker_gray"
                        tools:text="Last updated: May, 07 2020, 12:27, UTC"/>

                </LinearLayout>

                <TextView
                    android:id="@+id/confirmed_count"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:gravity="center_vertical|right"
                    android:paddingEnd="15dp"
                    android:textSize="20sp"
                    android:textColor="@color/blue"
                    tools:text="3,846,504"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/infected_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardPreventCornerOverlap="false"
            app:cardUseCompatPadding="true"
            card_view:cardBackgroundColor="#E6E6E6"
            card_view:cardCornerRadius="8dp"
            card_view:cardElevation="8dp">

            <LinearLayout
                android:id="@+id/infected_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/infected_icon"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:padding="5dp"
                    android:tint="@color/color_infected"
                    android:src="@drawable/ic_infected"/>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/infected_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_infected_title"
                        android:textSize="20sp"
                        android:textColor="@color/color_infected"/>

                    <TextView
                        android:id="@+id/infected_last_update"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="12sp"
                        android:textColor="@android:color/darker_gray"
                        tools:text="Last updated: May, 07 2020, 12:27, UTC"/>

                </LinearLayout>

                <TextView
                    android:id="@+id/infected_count"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:gravity="center_vertical|right"
                    android:paddingEnd="15dp"
                    android:textSize="20sp"
                    android:textColor="@color/color_infected"
                    tools:text="3,846,504"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/recovered_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardPreventCornerOverlap="false"
            app:cardUseCompatPadding="true"
            card_view:cardBackgroundColor="#E6E6E6"
            card_view:cardCornerRadius="8dp"
            card_view:cardElevation="8dp">

            <LinearLayout
                android:id="@+id/recovered_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/recovered_icon"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:padding="5dp"
                    android:tint="@color/color_recovered"
                    android:src="@drawable/ic_recovered"/>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/recovered_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_recovered_title"
                        android:textSize="20sp"
                        android:textColor="@color/color_recovered"/>

                    <TextView
                        android:id="@+id/recovered_last_update"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="12sp"
                        android:textColor="@android:color/darker_gray"
                        tools:text="Last updated: May, 07 2020, 12:27, UTC"/>

                </LinearLayout>

                <TextView
                    android:id="@+id/recovered_count"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:gravity="center_vertical|right"
                    android:paddingEnd="15dp"
                    android:textSize="20sp"
                    android:textColor="@color/color_recovered"
                    tools:text="3,846,504"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/dead_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardPreventCornerOverlap="false"
            app:cardUseCompatPadding="true"
            card_view:cardBackgroundColor="#E6E6E6"
            card_view:cardCornerRadius="8dp"
            card_view:cardElevation="8dp">

            <LinearLayout
                android:id="@+id/dead_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/dead_icon"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:padding="5dp"
                    android:tint="@color/color_dead"
                    android:src="@drawable/ic_dead"/>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/dead_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_dead_title"
                        android:textSize="20sp"
                        android:textColor="@color/color_dead"/>

                    <TextView
                        android:id="@+id/dead_last_update"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="12sp"
                        android:textColor="@android:color/darker_gray"
                        tools:text="Last updated: May, 07 2020, 12:27, UTC"/>

                </LinearLayout>

                <TextView
                    android:id="@+id/dead_count"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:gravity="center_vertical|right"
                    android:paddingEnd="15dp"
                    android:textSize="20sp"
                    android:textColor="@color/color_dead"
                    tools:text="3,846,504"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</layout>